<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        android:baselineAligned="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:layout_marginBottom="32dp"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button_free_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:backgroundTint="@color/forest_green"/>
            <Button
                android:id="@+id/button_two_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:backgroundTint="@color/forest_green"/>
            <Button
                android:id="@+id/button_three_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:backgroundTint="@color/forest_green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:layout_marginBottom="32dp"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button_free_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:backgroundTint="@color/moss_green"/>
            <Button
                android:id="@+id/button_two_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:backgroundTint="@color/moss_green"/>
            <Button
                android:id="@+id/button_three_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:backgroundTint="@color/moss_green"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:text="@string/score"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/score_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_score_player_1"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vs"
                android:textAllCaps="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />
            <TextView
                android:id="@+id/score_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_score_player_2"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>